@@ -1,6 +1,9 @@
 shady-skin Revision History
 ----------------------------------
 
+2016-03-29:
+- Added optional bright cutmarks in displayreplay
+
 2016-03-26:
 - Some more stuff for plex II
 - Added setup-submenu für pluginspecific settings
